--- a/src/index-en.html
+++ b/src/index-en.html
@@ -309,7 +309,7 @@
                   <div class="heading-separator">
                     <div class="heading-separator__line heading-separator__line-bolded-3 services-1-item-heading-separator__line"></div>
                   </div>
-                  <p class="paragraph">Tworzenie całej warstwy klienta aplikacji internetowej lub wybranych komponentów w oparciu o framework AngularJS, HTML5, CSS3, ES6/TypeScript.</p>
+                  <p class="paragraph">Tworzenie całej warstwy klienta aplikacji internetowej lub wybranych komponentów w oparciu <br>o framework AngularJS, HTML5, CSS3, ES6/TypeScript.</p>
                   <button class="btn to-top btn-primary-text services-1-item-button" type="button"><span>Więcej</span></button>
                 </div>
                 <div class="white-frame-058001 services-1-item text-center"><span class="icon-img icon-5 icon-services-api services-1-item-icon" aria-hidden="true"></span>
@@ -360,7 +360,7 @@
               </ul>
               <div class="row portfolio-items portfolio-items-js">
                 <div class="portfolio-item" data-type="websites">
-                  <figure class="portfolio-item__figure"><img class="portfolio-item__img" src="https://t4.ftcdn.net/jpg/01/01/91/63/240_F_101916353_CLAc4e3dzc1FPbfNwJctpwVCrbqBZclb.jpg" alt="An example img WEBSITE">
+                  <figure class="portfolio-item__figure" tabindex="0"><img class="portfolio-item__img" src="https://t4.ftcdn.net/jpg/01/01/91/63/240_F_101916353_CLAc4e3dzc1FPbfNwJctpwVCrbqBZclb.jpg" alt="An example img WEBSITE">
                     <figcaption class="portfolio-item__figcaption text-center">
                       <h3 class="heading heading-5 portfolio-item-title">Strona WEBSITE</h3>
                       <div class="heading-separator">
@@ -372,7 +372,7 @@
                   </figure>
                 </div>
                 <div class="portfolio-item" data-type="mailings">
-                  <figure class="portfolio-item__figure"><img class="portfolio-item__img" src="https://t4.ftcdn.net/jpg/01/01/91/63/240_F_101916353_CLAc4e3dzc1FPbfNwJctpwVCrbqBZclb.jpg" alt="An example img MAILINGS">
+                  <figure class="portfolio-item__figure" tabindex="0"><img class="portfolio-item__img" src="https://t4.ftcdn.net/jpg/01/01/91/63/240_F_101916353_CLAc4e3dzc1FPbfNwJctpwVCrbqBZclb.jpg" alt="An example img MAILINGS">
                     <figcaption class="portfolio-item__figcaption text-center">
                       <h3 class="heading heading-5 portfolio-item-title">Strona MAILINGS</h3>
                       <div class="heading-separator">
@@ -384,7 +384,7 @@
                   </figure>
                 </div>
                 <div class="portfolio-item" data-type="spa">
-                  <figure class="portfolio-item__figure"><img class="portfolio-item__img" src="https://t4.ftcdn.net/jpg/01/01/91/63/240_F_101916353_CLAc4e3dzc1FPbfNwJctpwVCrbqBZclb.jpg" alt="An example img SPA">
+                  <figure class="portfolio-item__figure" tabindex="0"><img class="portfolio-item__img" src="https://t4.ftcdn.net/jpg/01/01/91/63/240_F_101916353_CLAc4e3dzc1FPbfNwJctpwVCrbqBZclb.jpg" alt="An example img SPA">
                     <figcaption class="portfolio-item__figcaption text-center">
                       <h3 class="heading heading-5 portfolio-item-title">Strona SPA</h3>
                       <div class="heading-separator">
@@ -396,7 +396,7 @@
                   </figure>
                 </div>
                 <div class="portfolio-item" data-type="api">
-                  <figure class="portfolio-item__figure"><img class="portfolio-item__img" src="https://t4.ftcdn.net/jpg/01/01/91/63/240_F_101916353_CLAc4e3dzc1FPbfNwJctpwVCrbqBZclb.jpg" alt="An example img API">
+                  <figure class="portfolio-item__figure" tabindex="0"><img class="portfolio-item__img" src="https://t4.ftcdn.net/jpg/01/01/91/63/240_F_101916353_CLAc4e3dzc1FPbfNwJctpwVCrbqBZclb.jpg" alt="An example img API">
                     <figcaption class="portfolio-item__figcaption text-center">
                       <h3 class="heading heading-5 portfolio-item-title">Strona API</h3>
                       <div class="heading-separator">
@@ -429,40 +429,23 @@
           <div class="row">
             <div class="col-8">
               <div class="white-frame white-frame-0525001 contact-form-wrapper">
-                <h3 class="heading heading-4 contact-form-title text-center">Formularz kontaktowy</h3>
-                <form class="contact-form__form contact-form-js" action="#" autocomplete="off" name="contactForm" novalidate>
+                <form class="contact-form__form contact-form-js" action="#" autocomplete="off" method="post" name="contactForm">
+                  <h3 class="heading heading-4 contact-form-title text-center">Formularz kontaktowy</h3>
                   <div class="contact-form__input-container">
                     <label class="contact-form__label" for="contactForm[name]">Imię i nazwisko / Nazwa firmy<span class="color-primary"> *</span></label>
                     <input class="contact-form__input" id="contactForm[name]" name="name" type="text" required maxlength="150">
-                    <div class="contact-form__input-alerts" role="alert">
-                      <div data-alert="required">This is required !</div>
-                      <div data-alert="maxlength">That's too short !</div>
-                    </div>
                   </div>
                   <div class="contact-form__input-container">
                     <label class="contact-form__label" for="contactForm[email]">E-mail<span class="color-primary"> *</span></label>
-                    <input class="contact-form__input" id="contactForm[email]" name="email" type="email" required maxlength="100" pattern="">
-                    <div class="contact-form__input-alerts" role="alert">
-                      <div data-alert="required">This is required !</div>
-                      <div data-alert="maxlength">That's too short !</div>
-                      <div data-alert="pattern">That's not an email !</div>
-                    </div>
+                    <input class="contact-form__input" id="contactForm[email]" name="email" type="email" required maxlength="150">
                   </div>
                   <div class="contact-form__input-container">
                     <label class="contact-form__label" for="contactForm[subject]">Temat<span class="color-primary"> *</span></label>
                     <input class="contact-form__input" id="contactForm[subject]" name="subject" type="text" required maxlength="150">
-                    <div class="contact-form__input-alerts" role="alert">
-                      <div data-alert="required">This is required !</div>
-                      <div data-alert="maxlength">That's too short !</div>
-                    </div>
                   </div>
                   <div class="contact-form__input-container">
                     <label class="contact-form__label" for="contactForm[message]">Treść wiadomości<span class="color-primary"> *</span></label>
                     <textarea class="contact-form__textarea" id="contactForm[message]" name="message" required maxlength="1500"></textarea>
-                    <div class="contact-form__input-alerts" role="alert">
-                      <div data-alert="required">This is required !</div>
-                      <div data-alert="maxlength">That's too short !</div>
-                    </div>
                   </div>
                   <button class="btn to-top btn-primary contact-form__button" type="submit"><span>Wyślij wiadomość</span></button>
                 </form>
@@ -532,6 +515,11 @@
         </div>
       </div>
     </footer>
+    <div class="modal-wrapper modal-js" role="dialog" tabindex="-1">
+      <div class="modal-content">
+        <p class="paragraph text-medium text-center"><strong>Dziękuje za wiadomość!</strong><br>Jesteśmy w kontakcie. Odpowiem na wiadomość w przeciągu najbliższych 24h :)</p>
+      </div>
+    </div>
     <!--JavaScript Sources-->
     <!--build:js js/main.min.js-->
     <!--Bower Components-->
