--- a/src/index-en.html
+++ b/src/index-en.html
@@ -59,8 +59,9 @@
       <div class="container">
         <div class="row no-gutters align-items-center justify-content-between"><a class="site-logo__wrapper" href="/"><img class="site-logo__img" src="images/logo/logo.png" alt="#MA - Site logo" width="94" height="28"></a>
           <h1 class="text-hidden">#Mateusz Archiciński</h1>
-          <nav class="site-nav-wrapper">
-            <ul class="row site-nav__list">
+          <button class="site-nav__button-toggle site-nav-toggle-js" aria-label="Site navigation toggle button"><span></span></button>
+          <nav class="site-nav-wrapper site-nav-js">
+            <ul class="row align-items-center site-nav__list">
               <li><a class="site-nav__link site-nav__link-active" href="#home">Home</a></li>
               <li><a class="site-nav__link" href="#about-me">About me</a></li>
               <li><a class="site-nav__link" href="#services">Services</a></li>
@@ -72,7 +73,6 @@
                 </ul>
               </li>
             </ul>
-            <button class="site-nav__button-toggle" aria-label="Site navigation toggle button"></button>
           </nav>
         </div>
       </div>
@@ -109,7 +109,7 @@
             </header>
           </div>
           <div class="row justify-content-center">
-            <div class="col-6">
+            <div class="col-xl-6 col-lg-6 col-md-12">
               <figure class="dev-face__wrapper"><img class="dev-face__img dev-face__img-rotate-28" src="images/Mateusz-Archiciński_Front-End-Developer.jpg" alt="Face photo of Mateusz Archiciński" width="190" height="190">
                 <figcaption class="dev-face__img-caption"><span class="dev-face__name">Mateusz Archiciński</span><span class="dev-face__profession">Front-End Developer</span></figcaption>
               </figure>
@@ -174,7 +174,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-6">
+            <div class="col-xl-6 col-lg-6 col-md-12">
               <div class="about-me-section">
                 <header class="row no-gutters align-items-center about-me-section-header"><span class="icon icon-15 icon-star about-me-section-icon"></span><span class="filling-line"></span>
                   <h3 class="heading heading-4 text-center">Education</h3><span class="filling-line ending"></span>
@@ -230,7 +230,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-8">
+            <div class="col-xl-8 col-lg-8 col-md-12">
               <div class="about-me-section">
                 <header class="row no-gutters align-items-center about-me-section-header"><span class="icon icon-15 icon-desktop about-me-section-icon"></span><span class="filling-line"></span>
                   <h3 class="heading heading-4 text-center">Skills<br>and technologies</h3><span class="filling-line ending"></span>
